# LexTyp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
qml/: CitationPanel.qml  Main.qml  NavigationBar.qml  PdfPreview.qml  SidePanel.qml
qml/blocks/: BlockDelegate.qml  BlockListView.qml  BlockToolbar.qml  CitationBlock.qml  CitationPicker.qml  ParagraphBlock.qml  SectionBlock.qml  SlashMenu.qml  TitleBlock.qml
src/: CitationRangeHelper.cpp  CitationRangeHelper.h  DocumentModel.cpp  DocumentModel.h  PdfManager.cpp  PdfManager.h  TypstManager.cpp  TypstManager.h  TypstSerializer.cpp  TypstSerializer.h  main.cpp
src/ast/: CitationNode.h  DocumentNode.cpp  DocumentNode.h  ParagraphNode.h  SectionNode.h  TitleNode.h
src/bib/: BibEntry.h  BibEntryHelper.cpp  BibEntryHelper.h  BibParser.cpp  BibParser.h  ReferenceFilterModel.cpp  ReferenceFilterModel.h  ReferenceLibrary.cpp  ReferenceLibrary.h
src/citation/: ApaFormatter.cpp  ApaFormatter.h  ChicagoFormatter.cpp  ChicagoFormatter.h  CitationFormatter.cpp  CitationFormatter.h  CitationStyleRegistry.cpp  CitationStyleRegistry.h  HarvardFormatter.cpp  HarvardFormatter.h  IeeeFormatter.cpp  IeeeFormatter.h  PlainFormatter.cpp  PlainFormatter.h  TexTemplateParser.cpp  TexTemplateParser.h
src/oscola/: OscolaFormatter.cpp  OscolaFormatter.h
